updating where I'm from

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>Introduction</h1>
       <p>Hi!</p>
       <h1>Where I'm From</h1>
-      <p>Far away</p>
+      <p>A country near the Equator</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Leer y escuchar musica</p>
       <h1>What's your dream job?</h1>
